--- a/todo.org
+++ b/todo.org
@@ -1,10 +1,10 @@
 * Basic features
-** TODO Edit functions mor straightforward with multiple tags
-** TODO write unittests for every method
-** TODO Print unicode symbols correct
-** TODO support for case sensitive Names
+** TODO editEntry -> use tag by name and check if exists?
+** TODO use python mapping and list functions, ex getEntries by Tag -> map; tags to String -> map
 ** TODO simplejson error checking
-** TODO use python mapping and list functions, ex getEntries by Tag. map ->
+** TODO write unittests for every method
+** TODO support for case sensitive Names
+** TODO Print unicode symbols correct
 ** TODO device entropy
 ** TODO Export
 *** DONE json
@@ -13,6 +13,7 @@
 *** DONE json
 *** TODO CSV
 
+** DONE Edit functions mor straightforward with multiple tags
 ** DONE return values and input of getters int() str() ? --> ids
 ** DONE show IDs on entries ?
 ** DONE use wordlist.txt from config path if aviable, fallback .
@@ -53,7 +54,7 @@
 ** TODO click aliase
 ** TODO switch to poetry
 ** TODO screenshots
-** TODO wiki
+** TODO wiki/docs
 
 
 https://click.palletsprojects.com/en/7.x/bashcomplete/
