--- a/todo.org
+++ b/todo.org
@@ -1,22 +1,34 @@
 * Basic features
-** TODO editEntry -> use tag by name or id and check if exists?
-** TODO use python mapping and list functions, ex getEntries by Tag -> map; tags to String -> map
-** TODO simplejson error checking
-** TODO write unittests for every method
-*** TODO docker emulator
-** TODO support for case sensitive Names
-** TODO Print unicode symbols correct
 ** TODO device entropy
-** TODO simplify trezorAPI
-** TODO get cryptomodul correct and save
-** TODO click aliase
+** TODO check typeof when getting edit input
+** TODO Print unicode symbols correct
 ** TODO Export
 *** DONE json
 *** TODO CSV
 ** TODO Import
 *** DONE json
 *** TODO CSV
+** TODO simplify trezorAPI
+** TODO get cryptomodul correct and secure
+* Optimze
+** TODO use python mapping and list functions, ex getEntries by Tag -> map; tags to String -> map
+** TODO simplejson error checking
+** TODO support for case sensitive Names
+** TODO click aliase
+* repository
+** TODO switch to pipenv
+** TODO screenshots
+** TODO wiki/docs
+** TODO subrepo trezorlib for testing
+** DONE direnv
+** DONE pyenv
+* dev workflow
+** TODO logging and debug info
+** TODO write unittests for every method
+*** TODO docker emulator
 
+* Done
+** DONE editEntry -> use tag by name or id and check if exists?
 ** DONE Edit functions mor straightforward with multiple tags
 ** DONE return values and input of getters int() str() ? --> ids
 ** DONE show IDs on entries ?
@@ -53,14 +65,6 @@
 *** DONE padding?
 *** DONE how get IV -> Random
 *** DONE get entropy from device
-
-* repository
-** TODO switch to pipenv
-** DONE direnv
-** TODO screenshots
-** TODO wiki/docs
-** TODO subrepo trezorlib for testing
-
 
 https://click.palletsprojects.com/en/7.x/bashcomplete/
 eval "$(_TPASS_COMPLETE=source tpass)"
