--- a/todo.org
+++ b/todo.org
@@ -1,32 +1,32 @@
 * Basic features
 ** TODO check if Nonce changes on every edit in TPM
-** DONE device entropy
-** TODO check typeof when getting edit input
-** TODO Print unicode symbols correct
+** TODO check typeof when getting edit input and config parse
+** TODO support for case sensitive Names
 ** TODO Export
-*** DONE json
+*** TODO json
 *** TODO CSV
 ** TODO Import
-*** DONE json
+*** TODO json
 *** TODO CSV
 ** TODO get cryptomodul correct and secure
-** TODO put get_client in trezor.py logic make class?
+** DONE Print unicode symbols correct
+** DONE device entropy
 * Optimze
+** TODO put get_client in trezor.py logic make class?
 ** TODO refactor db into seperate class, needed for testing and import
 *** TODO refactor edit into seperate method
 ** TODO use python mapping and list functions, ex getEntries by Tag -> map; tags to String -> map
 ** TODO simplejson error checking
-** TODO support for case sensitive Names
 ** TODO click aliase
 * repository
 ** TODO screenshots
 ** TODO wiki/docs
 ** TODO subrepo trezorlib for testing
 * dev workflow
-** TODO logging and debug info
 ** TODO pipenv
 ** TODO write unittests for every method
 *** TODO docker emulator
+** DONE logging and debug info
 ** DONE direnv
 ** DONE pyenv
 
@@ -69,7 +69,3 @@
 *** DONE padding?
 *** DONE how get IV -> Random
 *** DONE get entropy from device
-
-https://click.palletsprojects.com/en/7.x/bashcomplete/
-eval "$(_TPASS_COMPLETE=source tpass)"
-eval "$(_TPASS_COMPLETE=source_zsh tpass)"
