--- a/todo.org
+++ b/todo.org
@@ -5,10 +5,12 @@
 ** TODO Import
 *** TODO json
 *** TODO CSV
-** TODO check typeof when getting edit input and config parse
+** DONE Make own click parameter instead of parse_name
 ** TODO input parsing should handle all symbols in names -> -u, -t, -i, -p, -s
+** TODO check typeof when getting edit input and config parse
 ** TODO get cryptomodul correct and secure
 *** TODO check if Nonce changes on every edit in TPM
+** TODO fish auto completion
 ** DONE support for case sensitive Names
 ** DONE Print unicode symbols correct
 ** DONE device entropy
